# slick

./: .gitignore  README.md  create_basic_characteristics_table.py  create_cloudspercore_list.py  create_jobscript.py  lim_code_simple.py  limfunctions.py  parameters.ini  pyproject.toml  setup.sh  slick.sh  slick_frontend.sh  slick_init.py  slick_init_jobscript.sh  slick_run.py  slick_run_jobscript.sh
Input_Files/: create_basic_characteristics_table.py  create_cloudspercore_list.py  limfunctions.py  parameters.ini  slick.py  slick_jobscript.sh
Output_Tables/SLURM_20220613/: slick1.py  slick1_jobscript.sh  slick2.py  slick2_jobscript.sh
docs/: README.md  _coverpage.md  _sidebar.md  index.html
docs/pages/: about.md  howitworks.md  howtouse.md  installing.md
src/: create_basic_characteristics_table.py  create_cloudspercore_list.py  create_jobscript.py  limfunctions.py  read_config.py  slick_init.py  slick_run.py
src/slick/: __init__.py  create_basic_characteristics_table.py  create_cloudspercore_list.py  create_final_galaxies_table.py  create_jobscript.py  limfunctions.py  mlfunctions.py  read_config.py  slick_init.py  slick_new.py  slick_run.py
src/slick/data/: UV_background.csv
src/slick/presets/: narayanan.ini  narayanan.sh
