[project]
name = "slick"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Karolina Garcia" },
    { name = "Desika Narayanan" },
    { name = "Gergö Popping" },
    { name = "Anirudh Ravishankar" },
    { name = "Sagan Sutherland" },
    { name = "Melanie Kaasinen" },
]
requires-python = ">=3.8"
dependencies = [
    "matplotlib>=3.7.5",
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "scikit-learn>=1.3.2",
    "scipy>=1.10.1",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "yt>=4.2.2",
]

[project.scripts]
slick = "slick:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
