[project]
name = "slick"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Karolina Garcia" },
    { name = "Desika Narayanan" },
    { name = "Gergö Popping" },
    { name = "Anirudh Ravishankar" },
    { name = "Sagan Sutherland" },
    { name = "Melanie Kaasinen" },
]
requires-python = ">=3.8"
dependencies = [
    "pandas==1.4.2",
    "numpy==1.22.3",
    "tqdm==4.64.0",
    "astropy==5.0.4",
    "scipy==1.7.3",
    "Cython==0.29.32",
    "yt==4.4.0",
]

[project.scripts]
slick = "slick:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
